Scroll to top button
Testing scroll to top button on iphone 13

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Portfolio showcasing my projects from the Frontend Development Program Year 1 at Noroff"
     />
+
+    <script
+      src="https://kit.fontawesome.com/bf1267e431.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
     <title>My Portfolio</title>
@@ -121,6 +126,8 @@
     <footer><p>&copy; 2025 Ingelinn Hallseth</p></footer>
 
     <!-- Scroll to Top Button -->
-    <button id="scrollToTopBtn" aria-label="Scroll to top">↑</button>
+    <button id="scrollToTopBtn" aria-label="Scroll to top">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
   </body>
 </html>
