--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
         <!-- Project 1: Cross Course Project - Rainydays -->
         <article class="project-card">
+          <h3>Cross Course Project</h3>
           <img
             src="./images/rainydays-thumbnail.png"
             alt="Cross Course Project Rainydays Thumbnail"
             loading="lazy"
           />
-          <h3>Rainydays</h3>
+
+          <h4>Rainydays</h4>
           <p>
             A responsive e-commerce website selling rain jackets, featuring
             dynamic product pages, filters, and cart functionality.
@@ -62,13 +64,16 @@
         </article>
 
         <!-- Project 2: Semester Project 1 - Community Science Museum -->
+
         <article class="project-card">
+          <h3>Semester Project 1</h3>
           <img
             src="./images/communitysciencemuseum-thumbnail.png"
             alt="Semester Project 1 Community Science Museum Thumbnail"
             loading="lazy"
           />
-          <h3>Community Science Museum</h3>
+
+          <h4>Community Science Museum</h4>
           <p>
             An educational museum website for children and families, designed
             with accessibility, structure, and creativity in mind.
@@ -93,12 +98,14 @@
 
         <!-- Project 3: Exam Project 1 - The Tasty Table -->
         <article class="project-card">
+          <h3>Exam Project 1</h3>
           <img
             src="./images/thetastytable-thumbnail.png"
             alt="Exam Project 1 The Tasty Table Thumbnail"
             loading="lazy"
           />
-          <h3>The Tasty Table</h3>
+
+          <h4>The Tasty Table</h4>
           <p>
             A food blog showcasing recipes from an API, with owner login, blog
             management, and responsive, modern design.
